tools/tests/errors/surf_arity_07.ki
# signatured builtin given an unexpected keyword argument
discard range(nope = 1)
